Add support for Microsoft Standard Time Zones

Because one incompatible timezone format would be to simple, Microsoft
has invented yet another one. Some invitations generated by Exchange 2010
(and maybe others) use "X Y Standard Time" as a TZID string. This commit
adds mapping between these strings and Olzon timezones that are accepted
by Google Calendar API

BUG: 321464
FIXED-IN: 2.0.2